# SGLang-FluentLLM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Quick_Start.md  README.md  clean_setup.sh
python/: pyproject.toml
python/sglang/: bench_chunker.py  bench_one_batch.py  bench_serving.py  launch_server.py  utils.py
python/sglang/bench_fused_moe/: bench.py  run_bench.sh
python/sglang/srt/: _custom_ops.py  custom_op.py  env.py  hf_transformers_utils.py  oe_utils.py  patch_torch.py  server_args.py  triton_complie_monitor.py  utils.py  warmup.py
python/sglang/srt/configs/: __init__.py  configuration_deepseek_mha_nsa.py  configuration_flash.py  configuration_glm4_moe.py  configuration_qwen3.py  configuration_qwen3_moe.py  configuration_shortcut.py  device_config.py  kimi_linear.py  load_config.py  model_config.py  qwen3_next.py  utils.py
python/sglang/srt/constrained/: base_grammar_backend.py  outlines_backend.py  outlines_jump_forward.py  xgrammar_backend.py
python/sglang/srt/disaggregation/: decode.py  decode_schedule_batch_mixin.py  kv_events.py  mini_lb.py  prefill.py  utils.py
python/sglang/srt/distributed/: decoder_comm_manager.py  model_tensor_tracer.py  parallel_state.py  parallel_strategy.py  utils.py
python/sglang/srt/entrypoints/: EngineBase.py  engine.py  http_server.py  http_server_engine.py
python/sglang/srt/function_call/: base_format_detector.py  core_types.py  deepseekv31_detector.py  deepseekv32_detector.py  deepseekv3_detector.py  ebnf_composer.py  function_call_parser.py  glm4_moe_detector.py  gpt_oss_detector.py  kimik2_detector.py  llama32_detector.py  longcat_detector.py  longcat_xml_detector.py  mistral_detector.py  pythonic_detector.py  qwen25_detector.py  qwen3_coder_detector.py  step3_detector.py  utils.py
python/sglang/srt/layers/: activation.py  dp_attention.py  flashinfer_comm_fusion.py  layernorm.py  linear.py  logits_processor.py  over_embedding.py  parameter.py  radix_attention.py  rotary_embedding.py  sampler.py  utils.py  vocab_parallel_embedding.py
python/sglang/srt/managers/: cache_controller.py  data_parallel_controller.py  detokenizer_manager.py  eplb_manager.py  expert_distribution.py  expert_location.py  expert_location_dispatch.py  io_struct.py  req.py  schedule_batch.py  schedule_policy.py  scheduler.py  scheduler_post_process_mixin.py  scheduler_profiler_mixin.py  scheduler_stats_mixin.py  tp_worker.py  (+6 more)
python/sglang/test/: run_eval.py  simple_eval_humaneval.py  test_block_fp8.py  test_thinking_budgets.py
(+253 files in other folders)
