[build-system]
requires = ["setuptools==69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluentllm"
version = "0.0.1"
description = "FluentLLM is fast serving framework for large language models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["requests", "tqdm", "numpy", "IPython", "setproctitle"]

[project.optional-dependencies]
runtime_common = [
    "aiohttp",
    "pybind11",
    "decord",
    "fastapi",
    "hf_transfer",
    "huggingface_hub",
    "interegular",
    "modelscope",
    "msgspec",
    "orjson",
    "packaging",
    "pillow",
    "prometheus-client>=0.20.0",
    "psutil",
    "pydantic",
    "py-spy",
    "python-multipart",
    "pyzmq>=25.1.2",
    "torchao>=0.7.0",
    "uvicorn",
    "uvloop==0.21.0",
    "ninja",
    "llguidance>=0.6.15",
    "transformers==4.56.2",
    "xgrammar==0.1.23",
    "openai==1.99.1",
    "cuda-bindings==12.9.0",
    "setuptools-scm==8.2.0",
    "urllib3==1.26.6",
    "pybase64",
    "scikit_build_core",
    "uv",
    "compressed-tensors==0.12.2",
    "partial-json-parser==0.2.1.1.post6",
    "dill==0.4.0",
    "nvidia-ml-py==13.580.82",
    "einops",
]
srt = [
    "fluentllm[runtime_common]",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "cuda-python==12.9.0",
    "cuda-bindings==12.9.0",
    "outlines>=0.0.44,<=0.1.11",
]
test = [
    "jsonlines",
    "matplotlib",
    "pandas",
    "sentence_transformers",
    "accelerate",
    "peft",
]

all = ["fluentllm[srt]"]

dev = ["fluentllm[all]", "fluentllm[test]"]

cuda_sm80 = [
    "fluentllm[dev]",
]

cuda_sm90 = [
    "fluentllm[dev]"
]

[project.urls]
"Homepage" = "https://github.com/meituan-longcat/FluentLLM"

[tool.setuptools.package-data]
"fluentllm" = [
    "srt/layers/moe/fused_moe_triton/configs/*.json",
    "srt/layers/quantization/configs/*.json",
    "jit_kernel/include/sgl_kernel/*.h",
    "jit_kernel/include/sgl_kernel/*.cuh",
    "jit_kernel/csrc/*.cuh"
]

[tool.setuptools.packages.find]
exclude = [
    "assets*",
    "benchmark*",
    "docs*",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs*",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
]
